--- a/homeworks/h1/index.html
+++ b/homeworks/h1/index.html
@@ -28,6 +28,7 @@
         <a href="./exercicios/e3/index.html">Exercício 3</a>
         <a href="./exercicios/e4/index.html">Exercício 4</a>
         <a href="./exercicios/e5/index.html">Exercício 5</a>
+        <a href="./exercicios/e6/index.html">Exercício 6</a>
     </div>
 </body>
 </html>
