--- a/homeworks/h1/index.html
+++ b/homeworks/h1/index.html
@@ -29,6 +29,8 @@
         <a href="./exercicios/e4/index.html">Exercício 4</a>
         <a href="./exercicios/e5/index.html">Exercício 5</a>
         <a href="./exercicios/e6/index.html">Exercício 6</a>
+        <a href="./exercicios/e7/index.html">Exercício 7</a>
+
     </div>
 </body>
 </html>
