--- a/homeworks/h1/index.html
+++ b/homeworks/h1/index.html
@@ -32,6 +32,7 @@
         <a href="./exercicios/e7/index.html">Exercício 7</a>
         <a href="./exercicios/e8/index.html">Exercício 8</a>
         <a href="./exercicios/e9/index.html">Exercício 9</a>
+        <a href="./exercicios/e10/index.html">Exercício 10</a>
     </div>
 </body>
 </html>
