--- a/homeworks/h2/index.html
+++ b/homeworks/h2/index.html
@@ -61,9 +61,9 @@
                         <div class="modal-body text-white">
                             <div>
                                 <h1 class="text-center">Exercício 2</h1>
-                                <p class="text-center" id="e2-text-color">A espera de um texto</p>
+                                <p class="text-center" id="e2-text-color">Esse texto aqui muda de cor!</p>
                             </div>
-                            <input type="color" class="btn btn-light" id="e2-btn-change-color">
+                            <input type="color" class="btn btn-light w-50" id="e2-input-change-color">
                         </div>
                     </div>
                 </div>
