--- a/homeworks/h2/index.html
+++ b/homeworks/h2/index.html
@@ -195,12 +195,64 @@
                                         </div>
                                     </div>
                                     <input type="submit" class="mt-2 btn btn-light w-100" value="Calcular" id="e5-calcular">
+                                    <input type="reset" class="mt-2 btn btn-light w-100" value="Limpar" id="e5-calcular">
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
                 <script src="./js/exercicio-5.js"></script>
+            </section>
+
+            <section class="exercicio-6 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 6
+
+                <button onclick="exercicio6();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-6">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-6" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 6</h1>
+                                    <div class="bg-white text-dark rounded-3 mb-2">
+                                        <input type="text" placeholder="0" class="text-center form-control" id="e6-result">
+                                    </div>
+                                </div>
+                                <div id="teclas">
+                                    <button onclick="limpar()" class="operation btn btn-danger btn-clear">C</button>
+                                    <!-- <button onclick="calcular('%')" class="operation btn btn-danger">%</button> -->
+                                    <button onclick="calcular('/')" class="operation btn btn-danger">/</button>
+                                    <button onclick="deletar()" class="operation btn btn-danger">del</button>
+                                    <button onclick="calcular(7)" class="btn btn-light">7</button>
+                                    <button onclick="calcular(8)" class="btn btn-light">8</button>
+                                    <button onclick="calcular(9)" class="btn btn-light">9</button>
+                                    <button onclick="calcular('-')" class="operation btn btn-danger">-</button>
+                                    <button onclick="calcular(4)" class="btn btn-light">4</button>
+                                    <button onclick="calcular(5)" class="btn btn-light">5</button>
+                                    <button onclick="calcular(6)" class="btn btn-light">6</button>
+                                    <button onclick="calcular('+')" class="operation btn btn-danger">+</button>
+                                    <button onclick="calcular(1)" class="btn btn-light">1</button>
+                                    <button onclick="calcular(2)" class="btn btn-light">2</button>
+                                    <button onclick="calcular(3)" class="btn btn-light">3</button>
+                                    <button onclick="igual()" class="operation btn btn-danger igual">=</button>
+                                    <button onclick="calcular(0)" class="btn btn-light">0</button>
+                                    <button onclick="calcular('*')" class="operation btn btn-danger">*</button>
+                                    <button onclick="calcular('.')" class="operation btn btn-danger">.</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-6.js"></script>
             </section>
         </main>
     </div>
