--- a/homeworks/h2/index.html
+++ b/homeworks/h2/index.html
@@ -207,7 +207,7 @@
             <section class="exercicio-6 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 6
 
-                <button onclick="exercicio6();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
                     data-bs-toggle="modal" data-bs-target="#exercicio-6">
                     Abrir
                 </button>
@@ -243,7 +243,7 @@
                                     <button onclick="calcular(1)" class="btn btn-light">1</button>
                                     <button onclick="calcular(2)" class="btn btn-light">2</button>
                                     <button onclick="calcular(3)" class="btn btn-light">3</button>
-                                    <button onclick="igual()" class="operation btn btn-danger igual">=</button>
+                                    <button onclick="resultado()" class="operation btn btn-danger igual">=</button>
                                     <button onclick="calcular(0)" class="btn btn-light">0</button>
                                     <button onclick="calcular('*')" class="operation btn btn-danger">*</button>
                                     <button onclick="calcular('.')" class="operation btn btn-danger">.</button>
