Corrigido o botão de resetar do exercício 5

--- a/homeworks/h2/index.html
+++ b/homeworks/h2/index.html
@@ -195,7 +195,7 @@
                                         </div>
                                     </div>
                                     <input type="submit" class="mt-2 btn btn-light w-100" value="Calcular" id="e5-calcular">
-                                    <input type="reset" class="mt-2 btn btn-light w-100" value="Limpar" id="e5-calcular">
+                                    <input type="reset" class="mt-2 btn btn-light w-100" value="Limpar" id="e5-resetar">
                                 </form>
                             </div>
                         </div>
@@ -229,7 +229,6 @@
                                 </div>
                                 <div id="teclas">
                                     <button onclick="limpar()" class="operation btn btn-danger btn-clear">C</button>
-                                    <!-- <button onclick="calcular('%')" class="operation btn btn-danger">%</button> -->
                                     <button onclick="calcular('/')" class="operation btn btn-danger">/</button>
                                     <button onclick="deletar()" class="operation btn btn-danger">del</button>
                                     <button onclick="calcular(7)" class="btn btn-light">7</button>
