--- a/homeworks/h2/index.html
+++ b/homeworks/h2/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="">
     <div class="container container-exercicios">
         <main class="exercicios">
             <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
@@ -254,6 +254,7 @@
                 <script src="./js/exercicio-6.js"></script>
             </section>
         </main>
+           <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
