--- a/homeworks/h3/index.html
+++ b/homeworks/h3/index.html
@@ -55,6 +55,34 @@
                 </div>
                 <script src="./js/exercicio-1.js"></script>
             </section>
+
+            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 2
+
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exercicio-2">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-2" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 2</h1>
+                                    <span id="e2-resultado"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-2.js"></script>
+            </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
