--- a/homeworks/h3/index.html
+++ b/homeworks/h3/index.html
@@ -56,7 +56,7 @@
                 <script src="./js/exercicio-1.js"></script>
             </section>
 
-            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+            <section class="exercicio-2 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 2
 
                 <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
@@ -84,7 +84,7 @@
                 <script src="./js/exercicio-2.js"></script>
             </section>
 
-            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+            <section class="exercicio-4 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 3
 
                 <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
@@ -111,6 +111,42 @@
                     </div>
                 </div>
                 <script src="./js/exercicio-3.js"></script>
+            </section>
+
+            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 4
+
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exercicio-4">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-4" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 4</h1>
+                                    <p>O que você deseja fazer? Selecione uma das opções abaixo.</p>
+                                    <div id="s4-modal"></div>
+                                </div>
+                                <div class="hotel">
+                                    <button class="btn btn-light" id="s4-checkin">Fazer checkin</button>
+                                    <button class="btn btn-light" id="s4-checkout">Fazer checkout</button>
+                                    <button class="btn btn-light" id="s4-extend">Estender hospedagem</button>
+                                    <button class="btn btn-light" data-bs-dismiss="modal">Sair</button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-4.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
