--- a/homeworks/h3/index.html
+++ b/homeworks/h3/index.html
@@ -148,6 +148,40 @@
                 </div>
                 <script src="./js/exercicio-4.js"></script>
             </section>
+
+            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 5
+
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exercicio-5">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-5" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 5</h1>
+                                    <p>Digite abaixo os valores das substâncias</p>
+                                    <h3 id="e5-resultado"></h3>
+                                </div>
+                                <form onsubmit="compararSubstancias(this);">
+                                    <input class="form-control" type="number" id="e5-subst-1" placeholder="Substância 1" value="4">
+                                    <input class="form-control mt-2" type="number" id="e5-subst-2" placeholder="Substância 2" value="2">
+                                    <input class="btn btn-light mt-2" id="e5-btn-checar" type="submit" value="Checar">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-5.js"></script>
+            </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
