--- a/homeworks/h3/index.html
+++ b/homeworks/h3/index.html
@@ -84,7 +84,7 @@
                 <script src="./js/exercicio-2.js"></script>
             </section>
 
-            <section class="exercicio-4 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+            <section class="exercicio-3 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 3
 
                 <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
@@ -113,7 +113,7 @@
                 <script src="./js/exercicio-3.js"></script>
             </section>
 
-            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+            <section class="exercicio-4 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 4
 
                 <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
@@ -149,7 +149,7 @@
                 <script src="./js/exercicio-4.js"></script>
             </section>
 
-            <section class="exercicio-1 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+            <section class="exercicio-5 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
                 Exercício 5
 
                 <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
@@ -181,6 +181,36 @@
                     </div>
                 </div>
                 <script src="./js/exercicio-5.js"></script>
+            </section>
+
+            <section class="exercicio-6 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 6
+
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exercicio-6">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-6" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 6</h1>
+                                    <p>Abaixo os números pares de 1 a 100 (no Console também)</p>
+                                    <h3 id="e6-resultado"></h3>
+                                </div>
+                                <button class="btn btn-light mt-2" id="e6-btn-checar">Checar os números pares até 100</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-6.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
