--- a/homeworks/h3/index.html
+++ b/homeworks/h3/index.html
@@ -239,12 +239,52 @@
                                     <h1 class="text-center">Exercício 7</h1>
                                     <h3 id="e7-resultado"></h3>
                                 </div>
-                                <input type="text" class="form-control my-2" placeholder="Digite alguma coisa!" id="e7-input">
+                                <input type="text" class="form-control my-2" placeholder="Digite alguma coisa!"
+                                    id="e7-input">
                             </div>
                         </div>
                     </div>
                 </div>
                 <script src="./js/exercicio-7.js"></script>
+            </section>
+
+            <section class="exercicio-8 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 8
+
+                <button type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exercicio-8">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-8" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 8</h1>
+                                    <p>Calcule o ajuste antes e depois de 2017</p>
+                                    <h3 id="e7-resultado"></h3>
+                                </div>
+                                <div>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <p>Reajuste salarial antes de 2017:</p>
+                                        <p id="s8-antes2017" class="text-danger"></p>
+                                    </div>
+                                    <div class="d-flex justify-content-center align-items-center gap-2">
+                                        <p>Reajuste salarial depois de 2017:</p>
+                                        <p id="s8-depois2017" class="text-danger"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-8.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
