--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -79,7 +79,7 @@
                 Exercício 3
 
                 <button onclick="exercicio3();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold" data-bs-toggle="modal"
-                    data-bs-target="#exercicio-2">
+                    data-bs-target="#exercicio-3">
                     Abrir
                 </button>
 
@@ -94,10 +94,10 @@
                             <div class="modal-body text-white">
                                 <div>
                                     <h1 class="text-center">Exercício 3</h1>
-                                    <p class="text-center" id="e1-text-note">Array inicial: <span
-                                            id="e2-arrayInicial"></span>
+                                    <p class="text-center">Array inicial: <span
+                                            id="e3-arrayInicial"></span>
                                     </p>
-                                    <p>Array de pares: <span id="e2-arrayPar"></span></p>
+                                    <p>Array modificado: <span id="e3-arrayNovo"></span></p>
                                 </div>
                             </div>
                         </div>
