--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -143,6 +143,38 @@
                 </div>
                 <script src="./js/exercicio-4.js"></script>
             </section>
+
+            <section class="exercicio-5 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 5
+
+                <button onclick="exercicio5();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-5">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-5" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <h1 class="text-center">Exercício 5</h1>
+                                    <p id="e5-lista-de-queijos"></p>
+                                    <p id="e5-lista-de-queijos-esquecidos"></p>
+                                    <p id="e5-lista-de-queijos-juntos"></p>
+                                    <p id="e5-lista-de-queijos-crescente"></p>
+                                    <p id="e5-lista-de-queijos-cottage"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-5.js"></script>
+            </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
