Feito o exercicio 6 e corrigido a multiplicação de itens nos outros.

--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -175,6 +175,46 @@
                 </div>
                 <script src="./js/exercicio-5.js"></script>
             </section>
+
+            <section class="exercicio-6 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 6
+
+                <button onclick="exercicio6();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-6">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-6" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <h1 class="text-center">Exercício 6</h1>
+                                <div >
+                                    <table id="e6-resultado" class="table text-white">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">ID</th>
+                                                <th scope="col">Categoria</th>
+                                                <th scope="col">Título</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-6.js"></script>
+            </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
