--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -194,7 +194,7 @@
                             </div>
                             <div class="modal-body text-white">
                                 <h1 class="text-center">Exercício 6</h1>
-                                <div >
+                                <div>
                                     <table id="e6-resultado" class="table text-white">
                                         <thead>
                                             <tr>
@@ -253,6 +253,37 @@
                     </div>
                 </div>
                 <script src="./js/exercicio-7.js"></script>
+            </section>
+
+            <section class="exercicio-8 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 8
+
+                <button onclick="exercicio8();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-8">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-8" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <h1 class="text-center">Exercício 8</h1>
+                                <p>Posições que recebem a medalha:</p>
+                            </div>
+                            <div>
+                                <p id="e8-uniao"></p>
+                                <p id="e8-intersecao"></p>
+                                <p id="e8-diferenca"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-8.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
