--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -273,7 +273,7 @@
                             </div>
                             <div class="modal-body text-white">
                                 <h1 class="text-center">Exercício 8</h1>
-                                <p>Posições que recebem a medalha:</p>
+                                <p>União, interseção e diferença</p>
                             </div>
                             <div>
                                 <p id="e8-uniao"></p>
@@ -284,6 +284,67 @@
                     </div>
                 </div>
                 <script src="./js/exercicio-8.js"></script>
+            </section>
+
+            <section class="exercicio-9 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 9
+
+                <button onclick="exercicio9();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-9">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-9" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <h1 class="text-center">Exercício 9</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-9.js"></script>
+            </section>
+
+            <section class="exercicio-10 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 10
+
+                <button onclick="exercicio10();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-10">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-10" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <h1 class="text-center">Exercício 10</h1>
+                            </div>
+                            <table class="table text-white">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Item</th>
+                                        <th scope="col">Valor</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="e10-tabela">
+                                </tbody>
+                            </table>
+                            <p id="e10-resultado"></p>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-10.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
