--- a/homeworks/h4/index.html
+++ b/homeworks/h4/index.html
@@ -305,6 +305,12 @@
                             <div class="modal-body text-white">
                                 <h1 class="text-center">Exercício 9</h1>
                             </div>
+                            <div>
+                                <p id="e9-pizzas-pedidas"></p>
+                                <p id="e9-refrigerantes-pedidos"></p>
+                                <p id="e9-sucos-pedidos"></p>
+                                <p id="e9-cervejas-pedidas"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
