--- a/homeworks/h5/index.html
+++ b/homeworks/h5/index.html
@@ -67,6 +67,37 @@
                 </div>
                 <script src="./js/exercicio-2.js"></script>
             </section>
+
+            <section class="exercicio-3 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 3
+
+                <button onclick="exercicio3();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-3">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-3" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body text-white">
+                                <div>
+                                    <button class="btn btn-light" id="btn-change-color">Mudar de cor</button>
+                                    <button class="btn btn-light" id="btn-reset-color">Parar troca</button>
+                                </div>
+                                <div id="display-color" class="w-100 mt-2 rounded-2 px-2" style="height: 30px;">
+                                    <p class="bg-dark rounded-2">Mude a cor e aguarde 2 segundos</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-3.js"></script>
+            </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
     </div>
