--- a/homeworks/h5/index.html
+++ b/homeworks/h5/index.html
@@ -56,11 +56,12 @@
                             </div>
                             <div class="modal-body text-white">
                                 <h3>Clique no botão para ver a hora atual e aguarde 3 segundos</h2>
-                                <h3 id="e2-showtime" class="text-success"></h3>
-                                <div>
-                                    <button class="btn btn-light" id="e2-btn-showtime">Clique para ver a hora</button>
-                                    <button class="btn btn-light" id="e2-btn-resetime">Resetar a hora</button>
-                                </div>
+                                    <h3 id="e2-showtime" class="text-success"></h3>
+                                    <div>
+                                        <button class="btn btn-light" id="e2-btn-showtime">Clique para ver a
+                                            hora</button>
+                                        <button class="btn btn-light" id="e2-btn-resetime">Resetar a hora</button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -97,6 +98,46 @@
                     </div>
                 </div>
                 <script src="./js/exercicio-3.js"></script>
+            </section>
+
+            <section class="exercicio-4 exercicio bg-dark text-white p-2 rounded-3 text-center text-uppercase">
+                Exercício 4
+
+                <button onclick="exercicio4();" type="button" class="btn btn-light mt-2 text-uppercase fw-bold"
+                    data-bs-toggle="modal" data-bs-target="#exercicio-4">
+                    Abrir
+                </button>
+
+                <div class="modal fade" id="exercicio-4" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content p-3 d-flex flex-column  bg-dark">
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn-close bg-white" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div>
+                                <form id="e4-form">
+                                    <label class="form-label">Configure seu sorteio</label>
+                                    <p class="form-control" id="e4-name">Bia</p>
+                                    <input type="submit" id="e4-btn-sortear" class="btn btn-light mt-2" value="Sortear">
+
+                                    <div class="d-flex align-items-center mt-4">
+                                        <span class="d-flex align-items-center mx-1">
+                                            <label for="e4-btn-velocidade" class="form-label m-0 mx-1">Velocidade:</label>
+                                            <input type="text" id="e4-btn-velocidade" class="form-control">
+                                        </span>
+                                        <span class="d-flex align-items-center mx-1">
+                                            <label for="e4-btn-tempo" class="form-label m-0 mx-1">Tempo:</label>
+                                            <input type="text" id="e4-btn-tempo" class="form-control">
+                                        </span>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="./js/exercicio-4.js"></script>
             </section>
         </main>
         <h1 class="name animation-background">Daniel Jacon - #vemser</h1>
