--- a/homeworks/h5/index.html
+++ b/homeworks/h5/index.html
@@ -125,11 +125,11 @@
                                     <div class="d-flex align-items-center mt-4">
                                         <span class="d-flex align-items-center mx-1">
                                             <label for="e4-btn-velocidade" class="form-label m-0 mx-1">Velocidade:</label>
-                                            <input type="text" id="e4-btn-velocidade" class="form-control">
+                                            <input type="number" id="e4-btn-velocidade" class="form-control">
                                         </span>
                                         <span class="d-flex align-items-center mx-1">
                                             <label for="e4-btn-tempo" class="form-label m-0 mx-1">Tempo:</label>
-                                            <input type="text" id="e4-btn-tempo" class="form-control">
+                                            <input type="number" id="e4-btn-tempo" class="form-control">
                                         </span>
                                     </div>
                                 </form>
