Adicionado mais cards no array

--- a/homeworks/h5/index.html
+++ b/homeworks/h5/index.html
@@ -25,7 +25,7 @@
                 <form id="form-comments">
                     <div>
                         <label for="input-email">E-mail</label>
-                        <input type="text" id="input-email" placeholder="Digite seu email">
+                        <input type="email" id="input-email" placeholder="Digite seu email">
                     </div>
                     <div>
                         <label for="input-mensagem" class="label-msg">Mensagem</label>
